# Linebot-rust

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  router.rs
src/domain/: consumption.rs  mod.rs
src/handler/: line_webhook.rs
src/infrastructure/: firestore.rs  line.rs  mod.rs
src/model/: line_event.rs  mod.rs
