[package]
name = "linebot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.20", features = ["json"] }
dotenv = "0.15"
uuid = "1"
bytes = "1.5"
hyper = "1"
http-body-util = "0.1"
unicode-normalization = "0.1"
gcloud-sdk = { version = "0.27.2", features = ["google-firestore-v1"] }
tonic = "0.13.1"
axum-macros = "0.5"